# wafer

./: .bowerrc  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  TODO  bower.json  install_requirements  manage.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: django-dev.yml  django.yml  run_tests.yml
docs/: Makefile  conf.py  index.rst  install.rst  kvpairs.rst  make.bat  menus.rst  multisite.rst  pages.rst  schedule.rst  settings.rst  sponsors.rst  static.rst  talks.rst  translations.rst
utils/: build_release.sh  bump-version.sh  update_i18n_files.sh
wafer/: __init__.py  constants.py  context_processors.py  forms.py  markdown.py  menu.py  models.py  settings.py  urls.py  utils.py  views.py  wsgi.py
wafer/compare/: admin.py
wafer/conf_registration/: admin.py  forms.py  models.py  urls.py  views.py
wafer/conf_registration/south_migrations/: 0001_initial.py
wafer/contrib/: mdx_static.py
wafer/invoices/: admin.py  models.py  views.py
wafer/invoices/migrations/: 0001_initial.py
wafer/invoices/south_migrations/: 0001_initial.py
wafer/kv/: models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
wafer/kv/migrations/: 0001_initial.py  0002_multisite.py
wafer/kv/tests/: test_kv_api.py
wafer/kvpairs/: __init__.py  admin.py  apps.py  fields.py  mixins.py  models.py  utils.py  views.py
wafer/kvpairs/migrations/: 0001_initial.py  __init__.py
wafer/kvpairs/tests/: test_models.py
wafer/locale/: django.pot
wafer/management/: static.py
wafer/management/commands/: pycon_emails.py  pycon_generate_invoices.py  pycon_register_attendee.py  pycon_send_invoice.py  pycon_speaker_contact_details.py  pycon_speaker_tickets.py  pycon_stats.py  pycon_summarise_invoices.py  wafer_add_default_groups.py  wafer_emails.py  wafer_registered_attendees.py  wafer_speaker_contact_details.py  wafer_speaker_tickets.py  wafer_stats.py  wafer_talk_video_reviewers.py
wafer/pages/: admin.py  forms.py  models.py  renderers.py  serializers.py  urls.py  views.py
wafer/pages/migrations/: 0001_initial.py  0002_page_people.py  0003_auto__rename_field_page_content_html_to_field_page__content_rendered__c.py  0003_non-null_people+files.py  0004_allow_blank_files_description.py  0005_page_cache_time.py  0006_menu_order.py  0006_multisite.py  (+1 more)
wafer/registration/: __init__.py  apps.py  backends.py  forms.py  sso.py  urls.py  validators.py  views.py
wafer/schedule/: admin.py  models.py  renderers.py  serializers.py  urls.py  views.py
wafer/sites/: models.py  tests.py
wafer/snippets/: markdown_field.py
wafer/sponsors/: admin.py  models.py  renderers.py  serializers.py  urls.py  views.py
wafer/talks/: admin.py  forms.py  models.py  renderers.py  serializers.py  urls.py  views.py
wafer/templates/: 403.html  404.html  500.html
wafer/templatetags/: wafer_registration.py
wafer/tests/: api_utils.py  test_menu.py  utils.py
wafer/tickets/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
wafer/users/: admin.py  forms.py  models.py  renderers.py  serializers.py  urls.py  views.py
wafer/volunteers/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
(+226 files in other folders)
