[project]
name = "wafer"
dynamic = ["version",]

dependencies = [
    "Django>=4.2,<6",
    "bleach",
    "bleach-allowlist",
    "crispy-bootstrap5",
    "diff-match-patch",
    "django-bakery>=0.13.0",
    "django-crispy-forms",
    "django-markitup>=4.0.0",
    "django-registration-redux",
    "django-reversion",
    "django-select2",
    "djangorestframework",
    "drf-extensions>=0.5.0",
    "icalendar>=6.0",
    "jsonfield",
    "markdown>=2.5",
    "pillow",
    "py3dns",
    "pyLibravatar",
    "pytz",
    "requests",
]

authors = [
    {name = "CTPUG", email = "ctpug@googlegroups.com" },
]

description = "A wafer-thin Django library for running small conferences."
readme = "README.rst"

license = "ISC"
license-files = ["LICENSE",]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Repository = "https://github.com/CTPUG/wafer"
Documentation = "https://wafer.readthedocs.io"
Issues = "https://github.com/CTPUG/wafer/issues"



[project.optional-dependencies]
dev = [
    "PyYAML",
    "lxml",
    "mock",
    "pep8",
    "pyflakes",
    "coverage",
]


[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["wafer",]

[tool.setuptools.dynamic]
version = {attr = "wafer.__version__"}
